--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     implementation 'pub.devrel:easypermissions:3.0.0'
     //downLoad images from the internet
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
+    //Zoom in on Images
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 
 
 }
