--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ android {
 }
 
 dependencies {
+    //emoji dependency
     implementation 'com.vdurmont:emoji-java:5.1.1'
     implementation 'com.vanniktech:emoji-google:0.7.0'
+
     def nav_version = "2.3.5"
 
     // Java language implementation
