--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,11 @@ dependencies {
 
     def nav_version = "2.3.5"
 
-    // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
-    // Feature module Support
     implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
     // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    //androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
@@ -70,8 +68,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //Zoom in on Images
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
-
-
-
+    //MonthYearPicker
+    implementation 'com.github.dewinjm:monthyear-picker:1.0.2'
 
 }
