--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,4 @@ dependencies {
     //Zoom in on Images
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     //MonthYearPicker
-    implementation 'com.github.dewinjm:monthyear-picker:1.0.2'
-
-}
+    implementation 'com.github.brunolimam:monthyearpicker:0.0.8'}
