--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     //emoji dependency
     implementation 'com.vdurmont:emoji-java:5.1.1'
     implementation 'com.vanniktech:emoji-google:0.7.0'
+    implementation files('libs\\aspose-cells-21.12-android.via.java.jar')
 
     def nav_version = "2.3.5"
 
