--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     //emoji dependency
     implementation 'com.vdurmont:emoji-java:5.1.1'
     implementation 'com.vanniktech:emoji-google:0.7.0'
-    implementation files('libs\\poi-3.7.jar')
+    implementation files('libs/poi-3.7.jar')
 
     //Navigation
     def nav_version = "2.4.1"
