--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     //Zoom in on Images
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     //MonthYearPicker
-    implementation 'com.github.brunolimam:monthyearpicker:0.0.8'}
+    implementation 'com.github.brunolimam:monthyearpicker:0.0.8'
+
+    implementation 'commons-io:commons-io:2.11.0'
+}
