--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
-    <!--  <uses-feature android:name="android.hardware.camera"
-          android:required="true"/>-->
+
 
     <application
         android:allowBackup="true"
@@ -21,7 +20,7 @@
         >
 
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.ElContador10.NoActionBar"
             android:exported="true">
