--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'androidx.navigation.safeargs'
+    id("com.google.gms.google-services")
 }
-//apply plugin: "androidx.navigation.safeargs"
-apply plugin: 'com.google.gms.google-services'  // Google Services plugin
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "be.kuleuven.elcontador10"
         minSdkVersion 16
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         android.defaultConfig.vectorDrawables.useSupportLibrary = true
@@ -30,6 +29,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'be.kuleuven.elcontador10'
 }
 
 dependencies {
@@ -39,7 +39,7 @@ dependencies {
     implementation files('libs/poi-3.7.jar')
 
     //Navigation
-    def nav_version = "2.5.1"
+    def nav_version = "2.6.0"
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
@@ -48,21 +48,21 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     //Others
-    implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     ////
     implementation platform('com.google.firebase:firebase-bom:28.4.0')// Import the Firebase BoM
     implementation 'com.google.firebase:firebase-analytics'// Declare the dependency for the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.android.gms:play-services-auth:20.3.0'// added for google sign in option
+    implementation 'com.google.android.gms:play-services-auth:20.6.0'// added for google sign in option
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-storage'
 
@@ -76,4 +76,7 @@ dependencies {
     implementation 'com.github.brunolimam:monthyearpicker:0.0.8'
 
     implementation 'commons-io:commons-io:2.11.0'
+}
+configurations.implementation {
+    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
 }
