--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,5 @@ dependencies {
 }
 configurations.implementation {
     exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
+    exclude group: 'org.json', module:'json'
 }
